--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -29,6 +29,27 @@
 
     }
 
+    html::-webkit-scrollbar-thumb {
+      /*滚动条里面小方块*/
+
+      border-radius: 10px;
+
+      -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+
+      background: #1f6256;
+
+    }
+
+    html::-webkit-scrollbar-track {
+      /*滚动条里面轨道*/
+
+      -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+
+      border-radius: 10px;
+
+      background: #EDEDED;
+
+    }
   </style>
 </head>
 
