--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -5,18 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="%PUBLIC_URL%/header_logo.png" />
-  <title>Gathero</title>
+  <title>Gathero.</title>
   <style>
     .isActive {
       font-weight: 700;
       font-size: 20px;
       margin-right: 30px;
-      min-width: 130px;
-      max-width: 130px;
+      /* min-width: 130px; */
+      /* max-width: 130px; */
       color: #1f6256;
     }
     html body {
-      overflow-x: scroll;
+      min-width: 1440px;
+      max-width: 100%;
     }
 
     html::-webkit-scrollbar {
@@ -29,27 +30,7 @@
 
     }
 
-    html::-webkit-scrollbar-thumb {
-      /*滚动条里面小方块*/
 
-      border-radius: 10px;
-
-      -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-
-      background: #1f6256;
-
-    }
-
-    html::-webkit-scrollbar-track {
-      /*滚动条里面轨道*/
-
-      -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-
-      border-radius: 10px;
-
-      background: #EDEDED;
-
-    }
   </style>
 </head>
 
